# Project-C-CUDA

./: CMakeLists.txt  Cuda_function  Readme.md  infer.cpp  inferapp  utils.hpp
Numcpp/: Num.hpp
QT/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  yolo_v2_class.hpp
QT/extra_lib/: darknet.h
RT/tensorrtX_MY/: LICENSE
RT/tensorrtX_MY/YOLOv3/yolov3/: detect.py  gen_wts.py  models.py
RT/tensorrtX_MY/YOLOv3/yolov3-spp/: gen_wts.py
RT/tensorrtX_MY/YOLOv3/yolov3-tiny/: gen_wts.py
RT/tensorrtX_MY/YOLOv3/yolov3/utils/: datasets.py  layers.py  utils.py
RT/tensorrtX_MY/yolov4_TINY/: CMakeLists.txt  yolov4.cfg  yolov4.cpp
RT/tensorrtX_MY/yolov5/: CMakeLists.txt  common.hpp  gen_wts.py  yololayer.h  yolov5.cpp
RT/tensorrtX_MY/yolov5/utils/: utils.py
RT/tensorrtx/yolov3/: CMakeLists.txt
Yolov4detect-master/: CMakeLists.txt  coco.names  main.cpp  yolo_v2_class.hpp  yolov4
cudakenel/: CMakeLists.txt  cudakenel.cu  cudakenel.cu.out  cudakenel.cuh  cudakenel.out  postprocess.cpp  postprocess.hpp
nms/: CMakeLists.txt  Makefile  nms_kernel.cu  nms_kernel.hpp  nms_kernel.out
